{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 60,
  "lineage": "5ac0e585-54ba-8420-0e5e-211b7cb37dba",
  "resources": [
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:841961777599:security-group/sg-018a89f84762360e4",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-018a89f84762360e4",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Node groups to cluster API",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03b3752b5bb007a93"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "my-devops-eks-cluster-cluster-2025071111191725230000000a",
            "name_prefix": "my-devops-eks-cluster-cluster-",
            "owner_id": "841961777599",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "DevOpsAssignment",
              "Name": "my-devops-eks-cluster-cluster",
              "Project": "my-devops-eks-cluster"
            },
            "tags_all": {
              "Environment": "DevOpsAssignment",
              "Name": "my-devops-eks-cluster-cluster",
              "Project": "my-devops-eks-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac3e546c2908ae53"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:841961777599:security-group/sg-03b3752b5bb007a93",
            "description": "EKS node shared security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all egress",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03b3752b5bb007a93",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 4443/tcp webhook",
                "from_port": 4443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-018a89f84762360e4"
                ],
                "self": false,
                "to_port": 4443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 6443/tcp webhook",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-018a89f84762360e4"
                ],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 8443/tcp webhook",
                "from_port": 8443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-018a89f84762360e4"
                ],
                "self": false,
                "to_port": 8443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node 9443/tcp webhook",
                "from_port": 9443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-018a89f84762360e4"
                ],
                "self": false,
                "to_port": 9443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-018a89f84762360e4"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-018a89f84762360e4"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node ingress on ephemeral ports",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              }
            ],
            "name": "my-devops-eks-cluster-node-2025071111191826350000000c",
            "name_prefix": "my-devops-eks-cluster-node-",
            "owner_id": "841961777599",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "DevOpsAssignment",
              "Name": "my-devops-eks-cluster-node",
              "Project": "my-devops-eks-cluster",
              "kubernetes.io/cluster/my-devops-eks-cluster": "owned"
            },
            "tags_all": {
              "Environment": "DevOpsAssignment",
              "Name": "my-devops-eks-cluster-node",
              "Project": "my-devops-eks-cluster",
              "kubernetes.io/cluster/my-devops-eks-cluster": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac3e546c2908ae53"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3851179997",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-018a89f84762360e4",
            "security_group_rule_id": "sgr-0815c3bfb7b6efb85",
            "self": false,
            "source_security_group_id": "sg-03b3752b5bb007a93",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks_cluster",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-1917242063",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-03b3752b5bb007a93",
            "security_group_rule_id": "sgr-0c0e1a8d8f40ff3a2",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-1531799172",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03b3752b5bb007a93",
            "security_group_rule_id": "sgr-0f21453dbdd14e432",
            "self": false,
            "source_security_group_id": "sg-018a89f84762360e4",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3989760854",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03b3752b5bb007a93",
            "security_group_rule_id": "sgr-0c3b39dbc16bfa944",
            "self": false,
            "source_security_group_id": "sg-018a89f84762360e4",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-613190848",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03b3752b5bb007a93",
            "security_group_rule_id": "sgr-079412b82b997f027",
            "self": false,
            "source_security_group_id": "sg-018a89f84762360e4",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-936423649",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03b3752b5bb007a93",
            "security_group_rule_id": "sgr-021232811e91ae8f4",
            "self": false,
            "source_security_group_id": "sg-018a89f84762360e4",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1399948074",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03b3752b5bb007a93",
            "security_group_rule_id": "sgr-04bc4cde5881568ac",
            "self": false,
            "source_security_group_id": "sg-018a89f84762360e4",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-1991234139",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03b3752b5bb007a93",
            "security_group_rule_id": "sgr-058fbeda4389a185a",
            "self": false,
            "source_security_group_id": "sg-018a89f84762360e4",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-3827229889",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03b3752b5bb007a93",
            "security_group_rule_id": "sgr-09d8ca59b0bff4904",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1814879995",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-03b3752b5bb007a93",
            "security_group_rule_id": "sgr-0dc8ebd5864d11ff8",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3363011860",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-03b3752b5bb007a93",
            "security_group_rule_id": "sgr-0feb39e895d144432",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.eks_cluster.aws_security_group.cluster",
            "module.eks_cluster.aws_security_group.node",
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:841961777599:network-acl/acl-052111d84c967906b",
            "default_network_acl_id": "acl-052111d84c967906b",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-052111d84c967906b",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "841961777599",
            "subnet_ids": [
              "subnet-08d665e32e091bdb8",
              "subnet-09e75623b93367d35",
              "subnet-0c7db852104e5119d",
              "subnet-0f14da3f520b54d1f"
            ],
            "tags": {
              "Environment": "DevOpsAssignment",
              "Name": "my-devops-eks-cluster-vpc-default",
              "Project": "my-devops-eks-cluster"
            },
            "tags_all": {
              "Environment": "DevOpsAssignment",
              "Name": "my-devops-eks-cluster-vpc-default",
              "Project": "my-devops-eks-cluster"
            },
            "vpc_id": "vpc-0ac3e546c2908ae53"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:841961777599:route-table/rtb-05388a75db7df9d19",
            "default_route_table_id": "rtb-05388a75db7df9d19",
            "id": "rtb-05388a75db7df9d19",
            "owner_id": "841961777599",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "DevOpsAssignment",
              "Name": "my-devops-eks-cluster-vpc-default",
              "Project": "my-devops-eks-cluster"
            },
            "tags_all": {
              "Environment": "DevOpsAssignment",
              "Name": "my-devops-eks-cluster-vpc-default",
              "Project": "my-devops-eks-cluster"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-0ac3e546c2908ae53"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:841961777599:security-group/sg-0068b9d4cafd0af5d",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0068b9d4cafd0af5d",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "841961777599",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "DevOpsAssignment",
              "Name": "my-devops-eks-cluster-vpc-default",
              "Project": "my-devops-eks-cluster"
            },
            "tags_all": {
              "Environment": "DevOpsAssignment",
              "Name": "my-devops-eks-cluster-vpc-default",
              "Project": "my-devops-eks-cluster"
            },
            "vpc_id": "vpc-0ac3e546c2908ae53"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00ad8f521c3e9d9b7",
            "arn": "arn:aws:ec2:ap-south-1:841961777599:elastic-ip/eipalloc-00ad8f521c3e9d9b7",
            "association_id": "eipassoc-019f73cdc2dcd5be9",
            "domain": "vpc",
            "id": "eipalloc-00ad8f521c3e9d9b7",
            "network_border_group": "ap-south-1",
            "network_interface": "eni-0f0a7e35e6cb24238",
            "private_dns": "ip-10-0-101-115.ap-south-1.compute.internal",
            "private_ip": "10.0.101.115",
            "public_dns": "ec2-3-7-239-79.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.7.239.79",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "DevOpsAssignment",
              "Name": "my-devops-eks-cluster-vpc-ap-south-1a",
              "Project": "my-devops-eks-cluster"
            },
            "tags_all": {
              "Environment": "DevOpsAssignment",
              "Name": "my-devops-eks-cluster-vpc-ap-south-1a",
              "Project": "my-devops-eks-cluster"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:841961777599:internet-gateway/igw-024ebda1a129d34ee",
            "id": "igw-024ebda1a129d34ee",
            "owner_id": "841961777599",
            "tags": {
              "Environment": "DevOpsAssignment",
              "Name": "my-devops-eks-cluster-vpc",
              "Project": "my-devops-eks-cluster"
            },
            "tags_all": {
              "Environment": "DevOpsAssignment",
              "Name": "my-devops-eks-cluster-vpc",
              "Project": "my-devops-eks-cluster"
            },
            "vpc_id": "vpc-0ac3e546c2908ae53"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-00ad8f521c3e9d9b7",
            "association_id": "eipassoc-019f73cdc2dcd5be9",
            "connectivity_type": "public",
            "id": "nat-01b59f4a8bdddd276",
            "network_interface_id": "eni-0f0a7e35e6cb24238",
            "private_ip": "10.0.101.115",
            "public_ip": "3.7.239.79",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-09e75623b93367d35",
            "tags": {
              "Environment": "DevOpsAssignment",
              "Name": "my-devops-eks-cluster-vpc-ap-south-1a",
              "Project": "my-devops-eks-cluster"
            },
            "tags_all": {
              "Environment": "DevOpsAssignment",
              "Name": "my-devops-eks-cluster-vpc-ap-south-1a",
              "Project": "my-devops-eks-cluster"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0f2359299107459c71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01b59f4a8bdddd276",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f2359299107459c7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-024ebda1a129d34ee",
            "id": "r-rtb-0308c7d28c5c0a9651080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0308c7d28c5c0a965",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:841961777599:route-table/rtb-0f2359299107459c7",
            "id": "rtb-0f2359299107459c7",
            "owner_id": "841961777599",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01b59f4a8bdddd276",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "DevOpsAssignment",
              "Name": "my-devops-eks-cluster-vpc-private",
              "Project": "my-devops-eks-cluster"
            },
            "tags_all": {
              "Environment": "DevOpsAssignment",
              "Name": "my-devops-eks-cluster-vpc-private",
              "Project": "my-devops-eks-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac3e546c2908ae53"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:841961777599:route-table/rtb-0308c7d28c5c0a965",
            "id": "rtb-0308c7d28c5c0a965",
            "owner_id": "841961777599",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-024ebda1a129d34ee",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "DevOpsAssignment",
              "Name": "my-devops-eks-cluster-vpc-public",
              "Project": "my-devops-eks-cluster"
            },
            "tags_all": {
              "Environment": "DevOpsAssignment",
              "Name": "my-devops-eks-cluster-vpc-public",
              "Project": "my-devops-eks-cluster"
            },
            "timeouts": null,
            "vpc_id": "vpc-0ac3e546c2908ae53"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-003b4fa2adb59850d",
            "route_table_id": "rtb-0f2359299107459c7",
            "subnet_id": "subnet-0f14da3f520b54d1f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec28e659f65bb9ae",
            "route_table_id": "rtb-0f2359299107459c7",
            "subnet_id": "subnet-08d665e32e091bdb8"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c0d4c3c446ecf924",
            "route_table_id": "rtb-0308c7d28c5c0a965",
            "subnet_id": "subnet-09e75623b93367d35"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094e207ed5adcb95b",
            "route_table_id": "rtb-0308c7d28c5c0a965",
            "subnet_id": "subnet-0c7db852104e5119d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:841961777599:subnet/subnet-0f14da3f520b54d1f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f14da3f520b54d1f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "841961777599",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "DevOpsAssignment",
              "Name": "my-devops-eks-cluster-vpc-private-ap-south-1a",
              "Project": "my-devops-eks-cluster"
            },
            "tags_all": {
              "Environment": "DevOpsAssignment",
              "Name": "my-devops-eks-cluster-vpc-private-ap-south-1a",
              "Project": "my-devops-eks-cluster"
            },
            "vpc_id": "vpc-0ac3e546c2908ae53"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:841961777599:subnet/subnet-08d665e32e091bdb8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d665e32e091bdb8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "841961777599",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "DevOpsAssignment",
              "Name": "my-devops-eks-cluster-vpc-private-ap-south-1b",
              "Project": "my-devops-eks-cluster"
            },
            "tags_all": {
              "Environment": "DevOpsAssignment",
              "Name": "my-devops-eks-cluster-vpc-private-ap-south-1b",
              "Project": "my-devops-eks-cluster"
            },
            "vpc_id": "vpc-0ac3e546c2908ae53"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:841961777599:subnet/subnet-09e75623b93367d35",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e75623b93367d35",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "841961777599",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "DevOpsAssignment",
              "Name": "my-devops-eks-cluster-vpc-public-ap-south-1a",
              "Project": "my-devops-eks-cluster"
            },
            "tags_all": {
              "Environment": "DevOpsAssignment",
              "Name": "my-devops-eks-cluster-vpc-public-ap-south-1a",
              "Project": "my-devops-eks-cluster"
            },
            "vpc_id": "vpc-0ac3e546c2908ae53"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:841961777599:subnet/subnet-0c7db852104e5119d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c7db852104e5119d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "841961777599",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "DevOpsAssignment",
              "Name": "my-devops-eks-cluster-vpc-public-ap-south-1b",
              "Project": "my-devops-eks-cluster"
            },
            "tags_all": {
              "Environment": "DevOpsAssignment",
              "Name": "my-devops-eks-cluster-vpc-public-ap-south-1b",
              "Project": "my-devops-eks-cluster"
            },
            "vpc_id": "vpc-0ac3e546c2908ae53"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:841961777599:vpc/vpc-0ac3e546c2908ae53",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-052111d84c967906b",
            "default_route_table_id": "rtb-05388a75db7df9d19",
            "default_security_group_id": "sg-0068b9d4cafd0af5d",
            "dhcp_options_id": "dopt-09e2e0f4c17e13653",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ac3e546c2908ae53",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-05388a75db7df9d19",
            "owner_id": "841961777599",
            "tags": {
              "Environment": "DevOpsAssignment",
              "Name": "my-devops-eks-cluster-vpc",
              "Project": "my-devops-eks-cluster"
            },
            "tags_all": {
              "Environment": "DevOpsAssignment",
              "Name": "my-devops-eks-cluster-vpc",
              "Project": "my-devops-eks-cluster"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}